--- a/src/components/MainView/MainView.css
+++ b/src/components/MainView/MainView.css
@@ -49,6 +49,7 @@
   height: 60px;
   border: 0;
   transform: rotate(135deg);
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 .about-me {
